<resources>
    <string name="app_name">Implicit Intents</string>
    <!--text-->
    <string name="text_web">Nhập link web stite</string>
    <string name="text_location">Nhập vị trí</string>
    <string name="text_sharetext">Nhập Văn bản</string>

    <!--button-->
    <string name="button_web">Open Web</string>
    <string name="button_location">Open Location</string>
    <string name="button_sharetext">Share This Text</string>
    <!--text-->
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="message">This is the message</string>
    <string name="send_to_activity">send to activity 4</string>
    <string name="message_received">Message Received</string>
    <!-- Fragment -->
    <string name="title1">Cry for a Shadow</string>
    <string name="article1">Many a Beatle fanatic started down the outtake
        road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.</string>
    <string name="title2">My Bonnie - Ain’t She Sweet</string>
    <string name="article2">At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="question_article">LIKE THE ARTICLE?</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="exception_message">must implement OnFragmentInteractionListener</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


