<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_10"
    android:orientation="vertical">
    <EditText
        android:layout_marginTop="@dimen/dp_30"
        android:id="@+id/text_input_web"
        android:hint="@string/text_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_web"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/button_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="@dimen/dp_20"
        android:id="@+id/text_input_location"
        android:hint="@string/text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_location"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/button_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="@dimen/dp_20"
        android:id="@+id/text_input_sharetext"
        android:hint="@string/text_sharetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_sharetext"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/button_sharetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>

